cabal-version:      2.4
name:               aoc2022
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             Pim Otte
maintainer:         otte.pim@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  MyLib
                    , Day1
                    , Day2
                    , Day3
                    , Day4
                    , Day5
                    , Day6
                    , Day7
                    , Day8
                    , Day9
                    , Day10
                    , Day11
                    , Day12
                    , Day13
                    , Day14

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.3.0
                    , trifecta
                    , containers
                    , split
    hs-source-dirs:   src
    default-language: Haskell2010

executable aoc2022
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.16.3.0,
        aoc2022

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite aoc2022-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          MyLibTest.hs
    build-depends:    base ^>=4.16.3.0
